# desafio-pytest

./: README.md  refatorar no nivel pleno.txt
estagiario/: README.md  pyproject.toml
estagiario/src/: ano_bissexto.py  contar_letras.py  fatorial.py  inverter_string.py  multiplo.py  ola.py  par_impar.py  verifcar_lista.py  verificar_num.py
estagiario/tests/: test_ano_bissexto.py  test_contar_letras.py  test_fatorial.py  test_inverter_string.py  test_lista_de_numeros.py  test_multiplo.py  test_ola.py  test_par_impar.py  test_verificar_lista.py  test_verificar_num.py
junior/: README.md  hello.py  pyproject.toml
junior/src/: bubble_sort.py  fatorial.py  gerar_de_senha.py  lista_de_numeros.py  media_aritimetica.py  numero_comano.py  numero_romano.py  temperatura.py
junior/tests/: test_bubble_sort.py  test_fatorial.py  test_gerador_de_senha.py  test_lista_de_numeros.py  test_media_aritimetica.py  test_numero_romano.py  test_temperatura.py
pleno/: README.md  pyproject.toml
pleno/src/: bubble_sort.py  numero_romano.py
pleno/tests/: test_bubble_sort.py  test_numero_romano.py
senior/: README.md
senior/api_client/: main.py  pyproject.toml
senior/api_client/components/: header.py  tasks.py
senior/todo_django_ninja/: manage.py  pyproject.toml
senior/todo_django_ninja/tasks/: models.py
senior/todo_django_ninja/tasks/migrations/: 0001_initial.py
senior/todo_django_ninja/todo_djn/: api.py  asgi.py  settings.py  wsgi.py
senior/todo_django_ninja/todo_djn/tests/: test_api.py  test_api_v1.py  test_run.py
