[project]
name = "pleno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
markers = [
    "imprimir: testes relacionados à funcionalidade de impressão",
    "funcional: testes relacionados à funcionalidade principal"
]